# reachy-learns-to-dance

./: .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml  requirements.txt
data/tiktok-dances/: README.md  tiktok-dance-1.json  tiktok-dance-10.json  tiktok-dance-2.json  tiktok-dance-3.json  tiktok-dance-4.json  tiktok-dance-5.json  tiktok-dance-6.json  tiktok-dance-7.json  tiktok-dance-8.json  tiktok-dance-9.json
docs/: architecture.md  how-it-was-built.md
reachy_mini_dj/: __init__.py  __main__.py  audio_engine.py  main.py  mistral_brain.py
reachy_mini_dj/static/: index.html
references/: api-reference.md
scripts/: README.md  reachy-control.py  reachy-dance.py  setup-tunnel.sh  tiktok-to-dance.py
